eicb-p1/src/test/testcases/errors/p1_public/task_priv_1/missing_semicolon_err.syn.mavl
function void main() {
	var int x
}